# MLOps3-course

./: .gitignore  .pdm-python  .pre-commit-config.yaml  Dockerfile  Dockerfile-dev  Dockerfile-jupyter  Dockerfile-test  README.md  contributing.md  docker-compose.yaml  main.py  pyproject.toml  ruff.toml
src/mlops3_course/: __init__.py
