[project]
name = "MLOps3-course"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Vladislav Volynets", email = "volynvlad@gmail.com"},
]
dependencies = [
    "pandas==1.5",
]

requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "ruff==0.3.4",
    "pre-commit==3.7.0",
]
test = [
    "pytest==8.1.1"
]
jupyter = [ 
    "jupyter>=1.0.0",
    "jupyterlab>=4.1.5",
    "matplotlib==3.1.1",
]